--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ansible-vault-vscode",
+  "name": "vscode-ansible-vault",
   "version": "1.0.13",
   "publisher": "ipierre1",
   "engines": {
@@ -96,7 +96,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/ipierre1/ansible-vault-vscode"
+    "url": "https://github.com/19bischof/vscode-ansible-vault"
   },
   "__metadata": {
     "isMachineScoped": true,
